# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml  setup.sfg
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_data_created_status_date_created.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_rename_data_created_task_date_created_and_more.py  0003_tasklabel_delete_taskstatus_task_labels.py
task_manager/templates/: base.html  form.html  index.html
task_manager/templates/labels/: del.html  index.html
task_manager/templates/statuses/: del.html  index.html
task_manager/templates/tasks/: del.html  index.html  list.html
task_manager/templates/users/: all.html  delete.html
task_manager/users/: form.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
