[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["michael <catcat2005@inbox.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
django = "^4.1.7"
django-bootstrap4 = "^22.3"
python-gettext = "^4.1"
django-filter = "^23.1"
whitenoise = "^6.4.0"
rollbar = "^0.16.3"
python-dotenv = "^1.0.0"
dj-database-url = "^0.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
